WIP using json.RawMessage type for Spec submit payload
