# docs/swagger.json
@@ -660,11 +660,10 @@
                 },
                 "Spec": {
                     "description": "The specification of this job.",
-                    "allOf": [
-                        {
-                            "$ref": "#/definitions/model.Spec"
-                        }
-                    ]
+                    "type": "array",
+                    "items": {
+                        "type": "integer"
+                    }
                 }
             }
         },
